# lr1121_hal

./: CMakeLists.txt  get_SWDR001.bash  get_libgpiod2.bash  run.bash
src/: firmware_updater.c  lr11xx_hal.c  lr11xx_linux_hal.c  lr11xx_linux_hal.h
